deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: registry:5000/hello-service:argo-c2e15a16-acb7-4ab5-9d38-ef760a33bb6a
          name: hello
          ports:
            - containerPort: 8080
              name: hello-web
