rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello
spec:
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: hello
  replicas: 5
  strategy:
    canary:
      stableService: hello-stable
      canaryService: hello-canary
      dynamicStableScale: true
      steps:
        - setWeight: 0
        - setCanaryScale:
            replicas: 1
        - pause:
            duration: 10
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 20
        - pause:
            duration: 10
        - setWeight: 60
        - pause:
            duration: 10
        - setWeight: 80
        - pause:
            duration: 10
            duration: 60
        - analysis:
            templates:
            - templateName: success-rate
            args:
            - name: service-name
              value: hello-canary
      trafficRouting:
        smi:
          rootService: hello
